challenge-tls/service2.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: nginx2-service
spec:
  selector:
    app: nginx2
  type: ClusterIP
  ports:
    - protocol:
      port: 1337
      targetPort: 80
---
