challenge-tls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-controller
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tls.rifaldoagustinus.com
      secretName: secret-tls
  rules:
    - host: tls.rifaldoagustinus.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx2-service
                port:
                  number: 1337
    - host: pnt.rifaldoagustinus.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
---
